# communityvi

./: .editorconfig  Cargo.toml  README.md  package-lock.json  renovate.json  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: backend.yaml  ci.yaml  frontend.yaml
communityvi-frontend/: .editorconfig  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  README.md  eslint.config.js  eslint.config.mjs  jest.config.cjs  jest.config.ts  package-lock.json  package.json  rollup.config.js  svelte.config.js  tsconfig.json  vite.config.ts
communityvi-frontend/.svelte-kit/: tsconfig.json
communityvi-frontend/public/: index.html
communityvi-frontend/src/: App.svelte  Header.svelte  Main.svelte  app.html  app.sass  main.ts
communityvi-frontend/src/client/: connection.ts  index.ts  request.ts  response.ts  transport.ts
communityvi-frontend/src/lib/: Notification.svelte  Notifications.svelte  Registration.svelte  error_bag.ts  stores.ts
communityvi-frontend/src/lib/client/: RESTClient.ts  broadcast.ts  client.ts  connection.ts  message_broker.ts  model.ts  promises.ts  reference_time_synchronizer.ts  registered_client.ts  request.ts  response.ts  transport.ts
communityvi-frontend/src/lib/components/: Header.svelte  Hello.svelte  MediumSelector.svelte  Notifications.svelte  Peers.svelte  Player.svelte  Registration.svelte
communityvi-frontend/src/lib/utils/: rate_limiter.ts
communityvi-frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  __layout.svelte  about.svelte  index.svelte
communityvi-frontend/src/styles/: _fontawesome.sass  main.sass
communityvi-frontend/tests/: app.spec.ts  hello.spec.ts  jest-setup.ts
communityvi-frontend/tests/client/: chat.spec.ts  medium.spec.ts  message_broker.spec.ts  model.spec.ts  peers.spec.ts  reference_time_synchronizer.spec.ts  registered_client.spec.ts  registration.spec.ts
communityvi-frontend/tests/components/: hello.spec.ts  medium_selector.spec.ts  player_coordinator.spec.ts
communityvi-frontend/tests/utils/: rate_limiter.spec.ts
communityvi-lib/: Cargo.toml
communityvi-lib/src/: lib.rs  message.rs  room.rs  server.rs  state.rs
communityvi-lib/tests/: server_test.rs
communityvi-server/: .env  .gitignore  Cargo.toml  README.md  build.rs  config.toml  configuration.toml  rustfmt.toml  sqlx-prepare.sqlite
communityvi-server/hyper-test/: Cargo.toml
communityvi-server/hyper-test/src/: client.rs  connection.rs  error.rs  executor.rs  host.rs  lib.rs  request_builder.rs  response.rs  serve.rs
communityvi-server/hyper-test/src/client/: aborting_join_handle.rs
communityvi-server/hyper-test/src/connection/: connection_incoming.rs  connector.rs
communityvi-server/migrations/: 20250605215901_initial_schema.sql
communityvi-server/src/: atomic_sequence.rs  client.rs  client_handle.rs  client_id_sequence.rs  commandline.rs  configuration.rs  connection.rs  context.rs  database.rs  error.rs  lifecycle.rs  main.rs  message.rs  reference_time.rs  room.rs  rweb_server_tests.rs  server.rs  server_tests.rs  state.rs  store.rs  types.rs  user.rs  utils.rs
communityvi-server/src/chat/: model.rs  repository.rs
communityvi-server/src/chat/repository/: tests.rs
communityvi-server/src/chat_message/: model.rs  repository.rs
communityvi-server/src/connection/: broadcast_buffer.rs  client.rs  receiver.rs  sender.rs  server.rs
communityvi-server/src/database/: error.rs  libsql.rs  sqlite.rs  transaction.rs  turso.rs
communityvi-server/src/database/libsql/: chat.rs  migration.rs  pool.rs  room.rs  test_utils.rs  user.rs
communityvi-server/src/database/sqlite/: chat.rs  chat_message.rs  medium.rs  room.rs  test_utils.rs  user.rs
communityvi-server/src/database/turso/: pool.rs
communityvi-server/src/message/: broadcast.rs  client_request.rs  outgoing.rs  server_response.rs
communityvi-server/src/message/outgoing/: broadcast_message.rs  error_message.rs  success_message.rs
communityvi-server/src/room/: client.rs  client_handle.rs  client_id.rs  client_id_sequence.rs  client_reference.rs  clients.rs  error.rs  medium.rs  model.rs  repository.rs  session_id.rs  session_id_sequence.rs  session_repository.rs  state.rs
communityvi-server/src/room/medium/: fixed_length.rs  model.rs  repository.rs
communityvi-server/src/room/repository/: tests.rs
communityvi-server/src/room/state/: medium.rs
communityvi-server/src/room/state/medium/: fixed_length.rs  playback_state.rs
communityvi-server/src/server/: api.rs  etag.rs  file_bundle.rs  frontend.rs  rest_api.rs  session.rs  unwind_safe_gotham_handler.rs  websocket_upgrade.rs
communityvi-server/src/server/api/: sessions.rs
communityvi-server/src/server/rest_api/: api_docs.rs  auth.rs  error.rs  models.rs  response.rs
communityvi-server/src/server/rest_api/error/: authentication_failed.rs  login.rs  user_creation.rs
communityvi-server/src/server/session/: id.rs
communityvi-server/src/server_tests/: rest_api.rs  test_client.rs
communityvi-server/src/server_tests/rest_api/: api_docs.rs
communityvi-server/src/store/: error.rs  models.rs  sqlite.rs
communityvi-server/src/types/: date_time.rs  uuid.rs
communityvi-server/src/user/: model.rs  repository.rs  user_id.rs
communityvi-server/src/user/repository/: tests.rs
communityvi-server/src/utils/: atomic_uint.rs  backtrace_disabler.rs  fake_connection.rs  fake_message_sender.rs  infallible_stream.rs  portable_integer.rs  portable_unsigned_integer.rs  rust_embed_adapter.rs  select_first_future.rs  sink_stream.rs  test_client.rs  time_source.rs  websocket_message_conversion.rs
communityvi-server/src/utils/portable_integer/: deserialize.rs
communityvi-server/src/utils/portable_unsigned_integer/: deserialize.rs
communityvi-server/static/: reference.css  reference.html  reference.js
communityvi-server/stoplight-elements/: package-lock.json  package.json
communityvi-server/swagger-ui/: package-lock.json  package.json
communityvi-server/test/files/: test-configuration.toml
communityvi-server/tests/: learning_tests.rs
(+21 files in other folders)
