[package]
name = "communityvi-lib"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"

[dependencies]
config = "0.9"
log = "0.4.6"
env_logger = "0.6.1"
warp = "0.1.16"
tungstenite = "0.8.1"
futures = "0.1.27"
tokio = "0.1.21"
http = "0.1.17"
chrono = "0.4.7"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
contrie = "0.1.4"

[dev-dependencies]
reqwest = "0.9.18"
tokio-tungstenite = "0.8.0"
url = "1.7.2"
parking_lot = "0.9.0"
lazy_static = "1.4.0"
