[package]
name = "communityvi-lib"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"

[dependencies]
config = "0.10.1"
log = "0.4.6"
env_logger = "0.7.1"
warp = "0.1.18"
tungstenite = "0.9.2"
futures01 = { package = "futures", version = "0.1.29" }
futures = "0.3.1"
tokio-compat = "0.1.2"
tokio = { version = "0.2.1", features = ["full"] }
http = "0.1.17"
chrono = "0.4.7"
serde = "1.0.97"
serde_derive = "1.0.97"
serde_json = "1.0.40"
contrie = "0.1.4"

[dev-dependencies]
reqwest = "0.9.18"
reqwest10 = { package = "reqwest", git = "https://github.com/seanmonstar/reqwest", rev = "47734f55f4cf60b928973e61afb957f9e6bcaf61", features = [ "json" ] }
tokio-tungstenite = { git = "https://github.com/dbcfd/tokio-tungstenite", rev = "tokio2" }
url = "2.1.0"
parking_lot = "0.10.0"
lazy_static = "1.4.0"
