[package]
name = "communityvi-lib"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>"]
edition = "2018"

[dependencies]
config = "0.10"
log = "0.4"
env_logger = "0.7"
warp = "0.1"
tungstenite = "0.9"
futures01 = { package = "futures", version = "0.1" }
futures = "0.3"
tokio-compat = "0.1"
tokio = { version = "0.2", features = ["full"] }
http = "0.1"
chrono = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
contrie = "0.1"

[dev-dependencies]
reqwest = {version = "0.10", features = ["json"]}
tokio-tungstenite = { git = "https://github.com/dbcfd/tokio-tungstenite", rev = "tokio2" }
url = "2.1"
parking_lot = "0.10"
lazy_static = "1.4"
