[package]
name = "communityvi-server"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>", "Thomas Keppler <winfr34k@gmail.com>"]
edition = "2021"
repository = "https://github.com/communityvi/communityvi"

[workspace]
members = [".", "hyper-test"]

[dependencies]
aide = {version = "0.9", features = ["axum"]}
axum = {version = "0.6", features = ["ws", "http2", "macros"]}
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4", features = ["derive"]}
env_logger = "0.10"
futures-util = "0.3"
futures-channel = "0.3"
governor = { version = "0.5", default-features = false, features = ["std", "jitter"] }
hex = "0.4"
humantime-serde = "1"
hyper-test = {path = "hyper-test"}
http-body = "0.4.5"
js_int = { version = "0.2", features = ["serde", "float_deserialize"]}
lazy_static = "1"
log = "0.4"
mime = "0.3"
mime_guess = {version = "2", default-features = false}
nonzero_ext = "0.3"
parking_lot = "0.12"
pin-project = "1"
quanta = "0.10"
rust-embed = { version = "6", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "parking_lot", "macros", "sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
tokio-tungstenite = "0.18"
toml = "0.5"
tower-service = "0.3"
typed-builder = "0.11"
unicode_skeleton = "0.1"

[dev-dependencies]
rand = "0.8"
async-trait = "0.1"
hyper-test = {path = "hyper-test"}

[build-dependencies]
npm_rs = "1.0"
ignore = "0.4"

[features]
default = []
# Bundle the JS frontend.
bundle-frontend = []
# Bundle Swagger-UI
api-docs = []
