[package]
name = "communityvi-server"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>", "Thomas Keppler <winfr34k@gmail.com>"]
edition = "2021"
repository = "https://github.com/communityvi/communityvi"
rust-version = "1.67"

[workspace]
members = [".", "hyper-test"]

[dependencies]
aide = {version = "0.11", features = ["axum", "axum-ws"]}
anyhow = "1"
axum = {version = "0.6", features = ["ws", "http2", "macros", "headers"]}
base64 = "0.21"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = {version = "4", features = ["derive"]}
env_logger = "0.10"
futures-channel = "0.3"
futures-util = "0.3"
governor = { version = "0.5", default-features = false, features = ["std", "jitter"] }
hex = "0.4"
http-body = "0.4.5"
humantime-serde = "1"
hyper-test = {path = "hyper-test"}
indexmap = "1"
js_int = { version = "0.2", features = ["serde", "float_deserialize"]}
jsonwebtoken = "8.2"
lazy_static = "1"
log = "0.4"
mime = "0.3"
mime_guess = {version = "2", default-features = false}
nonzero_ext = "0.3"
parking_lot = "0.12"
pin-project = "1"
quanta = "0.11"
rand = "0.8"
rust-embed = { version = "6", features = ["interpolate-folder-path"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "parking_lot", "macros", "sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
tokio-tungstenite = "0.19"
toml = "0.7"
tower-http = { version = "0.3", features = ["cors"] }
tower-service = "0.3"
typed-builder = "0.14"
unicode_skeleton = "0.1"

[dev-dependencies]
async-trait = "0.1"
hyper-test = {path = "hyper-test"}

[build-dependencies]
npm_rs = "1.0"
ignore = "0.4"

[features]
default = []
# Bundle the JS frontend.
bundle-frontend = []
# Bundle Swagger-UI
api-docs = []
