[package]
name = "communityvi-server"
version = "0.1.0"
authors = ["Max Bruckner <max@maxbruckner.de>", "Thomas Keppler <winfr34k@gmail.com>"]
edition = "2021"
repository = "https://github.com/communityvi/communityvi"
rust-version = "1.78"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
unseparated_literal_suffix = "allow"
items_after_statements = "allow"
default_trait_access = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"
used_underscore_binding = "allow"
let_underscore_untyped = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

[dependencies]
aide = { version = "0.13", features = ["axum", "axum-ws"] }
axum = { version = "0.7", features = ["ws", "http2", "macros"] }
axum-server = "0.7"
anyhow = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
futures-util = "0.3"
futures-channel = "0.3"
governor = { version = "0.6", default-features = false, features = ["std", "jitter"] }
hex = "0.4"
humantime-serde = "1"
http-body-util = "0.1"
js_int = { version = "0.2", features = ["serde", "float_deserialize"] }
log = "0.4"
mime = "0.3"
mime_guess = { version = "2", default-features = false }
nonzero_ext = "0.3"
parking_lot = "0.12"
pin-project = "1"
quanta = "0.12"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "parking_lot", "macros", "sync"] }
tokio-stream = { version = "0.1", default-features = false, features = ["sync"] }
tokio-tungstenite = "0.24"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tower-service = "0.3"
typed-builder = "0.20"
unicode_skeleton = "0.1"

[dev-dependencies]
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
async-trait = "0.1"

[build-dependencies]
npm_rs = "1.0"
ignore = "0.4"

[features]
default = []
# Bundle the JS frontend.
bundle-frontend = []
# Bundle Swagger-UI
api-docs = []
