[package]
name = "hyper-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
futures-util = {version = "0.3", default-features = false, features = ["alloc"]}
hyper = {version = "0.14", features = ["client", "server", "http1"]}
serde = {version = "1", default-features = false}
serde_json = "1"
tokio = {version = "1", features = ["sync", "rt"]}

[dev-dependencies]
static_assertions = "1"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["macros", "io-util"]}
futures-util = {version = "0.3", default-features = false}
